Added data and migration

--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
