--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;"
+    "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;",
+    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRental;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
