--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;",
-    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRental;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
