--- a/CarRental/appsettings.json
+++ b/CarRental/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DevConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;",
-    "CarRentalContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CarRental;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CarRentalContextConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=CarRentalDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
